tests/error/negative_array.gw
// [contains] NegativeArraySize: while allocating arrays
int i[-1];
<<< i >>>;
